k8s/apps/dev/bizquery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bizquery-ingress
  namespace: bizquery
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: app.bizquery.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bizquery-api
                port:
                  number: 8000
